--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Scheduled Player",
+    "name": "Forked Scheduled Player",
     "author": "Florian Wesch <fw@info-beamer.com>",
     "desc": "A schedulable playlist player with custom pages, plugins and animations",
     "repository": "https://github.com/info-beamer/package-scheduled-player",
